--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,23 +1,24 @@
 <app-header></app-header>
 <app-menu></app-menu>
-<h1>Expedición</h1>
+<h1>Antecedentes</h1>
     <p>
-    Kon-tiki fue el nombre de la balsa utilizada por el explorador noruego Thor Heyerdahl (1914-2002) en su expedición de 1947 por el océano Pacífico desde el Perú hasta la Polinesia. 
-    El nombre de la embarcación se debía al dios organizador del mundo andino, Viracocha, de quien se decía que antiguamente había llevado el nombre de «Kon-Tiki». Kon-Tiki es también el nombre del libro que escribió Heyerdahl sobre su experiencia.
+        Durante gran parte del siglo XVIII y comienzos del XIX, el Imperio Qing vivía relativamente aislado del mundo exterior. 
+        China se consideraba el centro de la civilización, autosuficiente y orgullosa. 
+        Europa, en cambio, estaba cada vez más interesada en sus productos: el té, la seda y la porcelana chinas se habían vuelto indispensables en Inglaterra. 
+        Sin embargo, mientras los europeos querían desesperadamente mercancías chinas, los chinos no mostraban interés por prácticamente nada fabricado en Occidente. 
+        Ese desequilibrio comercial causó un problema serio para Gran Bretaña: la plata británica fluía hacia China sin retorno, creando un déficit insostenible.<br>
+        Para corregirlo, la respuesta británica fue vender algo que sí tenía demanda dentro de China: el opio. 
+        Cultivado masivamente en la India bajo control británico, el opio comenzó a ingresar de manera a los puertos chinos.
+        En un inicio de manera legal ya que se consideraba medicinal.
+        A medida que pasaban los años, el consumo se extendió como una plaga social. 
+        Apensar de prohibirlos tiempo de despues millones de chinos se volvieron adictos, mientras la economía padecía la enorme salida de plata que ahora huía del país a cambio de esa droga. 
+        A la corrupción de funcionarios se sumó un deterioro social evidente, lo que alarmó profundamente al emperador Daoguang.<br>
+        Decidido a detener aquella catástrofe, el emperador envió en 1839 a uno de sus funcionarios más incorruptibles: Lin Zexu. Su misión era clara: erradicar el comercio del opio. 
+        Lin actuó con firmeza: cerró los depósitos extranjeros, exigió abandonar el tráfico y confiscó más de veinte mil cajas de opio pertenecientes a comerciantes británicos. 
+        Todo aquel material fue destruido públicamente en Humen, un acto que, aunque celebrado por la población china, fue interpretado por el Reino Unido como un ataque directo a sus intereses comerciales y a la seguridad de sus súbditos.<br>
+        La tensión aumentó rápidamente. El gobierno británico, bajo presión de comerciantes y políticos, decidió enviar una expedición militar para castigar a China y garantizar la apertura del comercio bajo condiciones británicas. <br>
+        Comenzaba así la Primera Guerra del Opio.
     </p>
-    <p>
-    Heyerdahl sostenía que pobladores procedentes del Perú podrían haber llegado hasta la Polinesia ya en tiempos precolombinos. 
-    El propósito de Heyerdahl era demostrar la posibilidad de que el poblamiento de la Polinesia se hubiese llevado a cabo por vía marítima, desde América del Sur, en balsas idénticas a la usada durante la expedición y movidas únicamente por las mareas, las corrientes y la fuerza del viento, que es casi constante, en dirección este-oeste, a lo largo del Ecuador. 
-    No obstante, la expedición dispuso de ciertos elementos como una radio, relojes, mapas, sextantes y cuchillos, aunque estos no fueron relevantes a la hora de probar que una balsa como la utilizada podía realizar la travesía.
-    </p>
-    <p>
-    La expedición Kon-Tiki fue financiada mediante préstamos y contó con donaciones de parte del ejército de Estados Unidos. 
-    Heyerdahl viajó tiempo antes al Perú, donde, junto con un pequeño grupo de personas y dentro del espacio provisto por las autoridades nacionales, se dedicó a la construcción de la balsa. 
-    Para ello, se emplearon troncos de madera balsa y otros materiales autóctonos como la totora, y se mantuvo el estilo de construcción indígena tal como se observó en las ilustraciones dejadas por los conquistadores españoles.
-    </p>
-    <p>
-    La travesía comenzó el 28 de abril de 1947. Heyerdahl y otros cinco integrantes viajaron durante ciento un días a lo largo de casi 7000 km por el océano Pacífico, hasta llegar a un arrecife en el atolón de Raroia, en las islas Tuamotu, el 7 de agosto de 1947. 
-    Toda la tripulación llegó a tierra sana y salva.
-    </p>
-    <img src="./assets/kon--tiki.jpg" width="450px" height="250px">
+    <img src="./assets/1_031.jpg" width="450px" height="250px">
+
 <app-footer></app-footer>
