--- a/src/app/pages/menu/menu.component.html
+++ b/src/app/pages/menu/menu.component.html
@@ -1,4 +1,8 @@
 <nav class="menu-container">
   <a routerLink="">Inicio</a>
-  <a routerLink="/Balsa">Balsa</a>
+  <a routerLink="/Guerra">Guerra</a>
+  <a routerLink="/Final">Culminacion</a>
+
+  <a routerLink="/Balsa">Guerra 2</a>
+
 </nav>
