--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -165,5 +165,18 @@
       margin-block: 1.5rem;
     }
   }
-
+  @media (prefers-color-scheme: dark) {
+  :root {
+    --bg-color: #181818;
+    --text-color: #f0f0f0;
+    --card-bg: #242424;
+  }
+  }
+  body {
+    background-color: var(--bg-color);
+    color: var(--text-color);
+    margin: 0;
+    padding: 0;
+    font-family: Arial, Helvetica, sans-serif;
+  }
   
