--- a/src/app/pages/footer/footer.component.html
+++ b/src/app/pages/footer/footer.component.html
@@ -1,3 +1,3 @@
 <footer class="footer-container">
-  <p>© 2025 — Mi sitio web. Todos los derechos reservados.</p>
+  <p>© 2025 — Matos. Todos los derechos reservados.</p>
 </footer>
