--- a/src/app/pages/header/header.component.html
+++ b/src/app/pages/header/header.component.html
@@ -1,3 +1,2 @@
-<header class="header-container">
-  <h1 class="logo">Kon-tiki</h1>
-</header>
+<header class="header">
+  <div class="logo">La guerra del Opio</div>
