--- a/src/app/pages/menu/menu.component.css
+++ b/src/app/pages/menu/menu.component.css
@@ -1,6 +1,6 @@
 .menu-container {
   width: 100%;
-  background-color: #1565c0;
+  background-color: #5900ff;
   display: flex;
   justify-content: center;  
   gap: 40px;                 
@@ -8,7 +8,7 @@
 }
 
 .menu-container a {
-  color: white;
+  color: rgb(255, 255, 255);
   text-decoration: none;     
   font-weight: bold;
   font-size: 18px;
@@ -17,7 +17,7 @@
 }
 
 .menu-container a:hover { 
-  background-color: #1e88e5;
+  background-color: #ffffff;
 }
 
 @media (max-width: 600px) {
@@ -31,3 +31,5 @@
     text-align: center;
   }
 }
+
+
