--- a/src/app/pages/menu/menu.component.css
+++ b/src/app/pages/menu/menu.component.css
@@ -1,42 +1,68 @@
-.menu-container {
-  width: 100%;
-  background-color: #5900ff;
+.navbar {
+  background: linear-gradient(to right, #7b2ff7, #100125);
+  padding: 12px 20px;
   display: flex;
-  justify-content: center;  
-  gap: 40px;                 
-  padding: 15px;
+  justify-content: space-between;
+  align-items: center;
+  color: white;
 }
 
-.menu-container a {
-  color: rgb(255, 255, 255);
-  text-decoration: none;     
+.logo {
+  font-size: 1.2rem;
   font-weight: bold;
-  font-size: 18px;
-  border-radius: 4px;
-  transition: background-color 0.3s;
 }
 
-.menu-container a:hover { 
-  background-color: #ffffff;
+.Botom {
+  display: none;
+  font-size: 2rem;
+  background: none;
+  border: none;
+  color: white;
+  cursor: pointer;
 }
 
-@media (max-width: 600px) {
-  .nav-links {
+ul {
+  display: flex;
+  list-style: none;
+  gap: 25px;
+  padding: 0;
+  margin: 0;
+}
+
+li a {
+  color: white;
+  text-decoration: none;
+  font-weight: bold;
+}
+
+@media (max-width: 768px) {
+  .Botom {
+    display: block; 
+  }
+
+  ul {
+    display: none;          
+    position: absolute;
+    top: 60px;
+    right: 10px;
+    background: #5a00e0;
     flex-direction: column;
+    width: 180px;
+    padding: 10px 0;
+    border-radius: 8px;
   }
 
-  .nav-links a {
+  ul.open {
+    display: flex; 
+  }
+
+  li {
+    padding: 12px 10px;
+    text-align: center;
+  }
+
+  li a {
+    display: block;
     width: 100%;
-    text-align: center;
   }
 }
-
-@media (max-width: 900px) {
-  header {
-    flex-direction: center;
-    text-align: center;
-  }
-}
-
-
-
