--- a/src/styles.css
+++ b/src/styles.css
@@ -1,12 +1,16 @@
-
 html, body {
   margin: 0;
   padding: 0;
-  height: 100%;
+  width: 100%;
+  overflow-x: hidden; 
 }
+
 
 body {
   overflow-x: hidden;
   background-color: #ffffff; 
+  margin: 0;
+  padding: 0;
+  overflow-x: hidden;
 }
 
