--- a/src/app/pages/guerra/guerra.component.css
+++ b/src/app/pages/guerra/guerra.component.css
@@ -22,13 +22,13 @@ h1 {
   font-size: 2.2rem;
   margin-bottom: 20px;
   text-align: center;
-  color: #333;
+  color: var(--text-color);
 }
 
 p {
   font-size: 1.1rem;
   line-height: 1.6;
-  color: #000000;
+  color: var(--text-color);
   margin: 20px 0;
   padding-left: 2%;
   padding-right: 2%;
